<resources>
    <string name="app_name">S3Project</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="or_join_us">OR JOIN US!</string>
    <string name="owner">OWNER</string>
    <string name="set_password">Set Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_number">Contact Number</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="teacher">teacher</string>
    <string name="finances">finances</string>
    <string name="salary">salary</string>
    <string name="review">review</string>
    <string name="welcome">Welcome!</string>
    <string name="fees">fees</string>
    <string name="instructor">INSTRUCTOR</string>
    <string name="add_student">ADD STUDENT</string>
    <string name="add_batch">ADD BATCH</string>
    <string name="attendance">attendance</string>
    <string name="add_attendance">ADD ATTENDANCE</string>
    <string name="mark_attendance">MARK ATTENDANCE</string>
    <string name="receive_fees">RECEIVE FEES</string>
    <string name="parent">PARENT</string>
    <string name="view_attendance">VIEW ATTENDANCE</string>
    <string name="student">STUDENT</string>
    <string name="pay_fees">PAY FEES</string>
    <string name="reviewCaps">REVIEW</string>
    <string name="reports">REPORTS</string>
    <string name="add_reports">ADD REPORTS</string>
    <string name="view_reports">VIEW REPORTS</string>
    <string name="reviews">REVIEWS</string>
    <string name="fees_caps">FEES</string>
    <string name="add_instructor">ADD INSTRUCTOR</string>
    <string name="salary_caps">SALARY</string>
    <string name="view_reviews">View Reviews</string>
    <string name="signin_with_google">SignIn with Google</string>
    <string name="attendance1">ATTENDANCE</string>
</resources>