<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard.owner_dashboard"
    android:background="@color/primary">

    <TextView
        android:id="@+id/tv_owner"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/student"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="415dp"
        android:layout_height="588dp"
        android:background="@drawable/dashboard_design"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/btn_attendance"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="44dp"
            android:scaleType="fitStart"
            android:contentDescription="@string/mark_attendance"
            android:src="@drawable/attendance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_review"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="48dp"
            android:contentDescription="@string/review"
            android:scaleType="fitCenter"
            android:src="@drawable/review"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <ImageButton
            android:id="@+id/btn_fees"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/fees"
            android:src="@drawable/img"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


            <ImageButton
            android:id="@+id/btn_reports"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="48dp"
            android:contentDescription="@string/view_reports"
            android:scaleType="fitCenter"
            android:src="@drawable/progressreport"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="12dp"
            android:text="@string/pay_fees"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_fees" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="12dp"
            android:text="@string/attendance1"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_attendance" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="84dp"
            android:text="@string/reviewCaps"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_review" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="60dp"
            android:text="@string/view_reports"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_reports" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_owner" />

</androidx.constraintlayout.widget.ConstraintLayout>