<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard.owner_dashboard"
    android:background="@color/primary">

    <TextView
        android:id="@+id/tv_owner"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/instructor"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="415dp"
        android:layout_height="588dp"
        android:background="@drawable/dashboard_design"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/btn_student"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="44dp"
            android:background="00000000"
            android:scaleType="fitStart"
            android:contentDescription="@string/add_student"
            android:src="@drawable/student"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_batch"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:contentDescription="@string/add_batch"
            android:layout_marginTop="44dp"
            android:scaleType="fitCenter"
            android:layout_marginEnd="48dp"
            android:background="00000000"
            android:src="@drawable/addbatch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_view_attendance"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="48dp"
            android:background="00000000"
            android:contentDescription="@string/mark_attendance"
            android:scaleType="fitCenter"
            android:src="@drawable/attendance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageButton
            android:id="@+id/btn_add_attendance"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="20dp"
            android:background="00000000"
            android:contentDescription="@string/attendance"
            android:scaleType="fitCenter"
            android:src="@drawable/markattendance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <ImageButton
            android:id="@+id/btn_receive_fees"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="56dp"
            android:background="00000000"
            android:contentDescription="@string/receive_fees"
            android:scaleType="fitCenter"
            android:src="@drawable/img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_attendance" />

        <ImageButton
            android:id="@+id/btn_reports"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:background="00000000"
            android:contentDescription="@string/add_reports"
            android:scaleType="fitCenter"
            android:src="@drawable/progressreport"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:text="@string/add_attendance"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_attendance" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="12dp"
            android:text="@string/add_student"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_student" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="76dp"
            android:text="@string/add_batch"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_batch" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:text="@string/view_attendance"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_view_attendance" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:text="@string/add_reports"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_reports" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:text="@string/receive_fees"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_receive_fees" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_owner" />

</androidx.constraintlayout.widget.ConstraintLayout>