<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp_Login.login"
    android:background="@color/iceblue"
    >

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="193dp"
        android:layout_height="158dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_username"
        android:layout_width="322dp"
        android:layout_height="53dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_login" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="322dp"
        android:layout_height="53dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:layout_marginTop="40sp"
        android:backgroundTint="@color/spring_green"
        android:gravity="center"
        android:shadowColor="@color/spring_green"
        android:text="@string/login"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="114dp"
        android:layout_height="52dp"
        android:layout_marginTop="52dp"
        android:backgroundTint="@color/spring_green"
        android:text="@string/signup"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <TextView
        android:id="@+id/joinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_join_us"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>